--- a/space1.css
+++ b/space1.css
@@ -6,30 +6,39 @@ body {
 
 .frame{
 	background-color: rgba(0,128,0,0.4);
-	
+	width: 600px;
+	height: auto;
+	margin:auto;
+	padding: 1px 9px 19px 10px;
 	/* put css-rules in this ccs-block here below */
-	
+
 }
 
 h1{
 	background-color: rgba(0,32,0,0.4);
 	line-height: 40px;
-	
+	padding: 19px;
+	margin: 20px 10px 31px 10px;
 	/* put css-rules in this ccs-block here below */
-	
+
 }
 
 h2 {
 	line-height: 30px;
-	
+	border: 5px solid purple;
+	padding-left: 10px;
+
 	/* put css-rules in this ccs-block here below */
-	
+
 }
 
 p{
 	background-color: rgba(256,256,0,0.4);
 	line-height: 20px;
-	
+	margin-top:10px;
+	margin-bottom: 10px;
+	padding:10px;
+
 	/* put css-rules in this ccs-block here below */
 
 }
